--- a/works/index.html
+++ b/works/index.html
@@ -15,17 +15,20 @@
     <link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.css">
 	</head>
 	<body>
+		<div id="cover">
+			<p>Loading...</p>
+		</div>
 		<div id="container">
 		<div id="icons-block">
 			<div id="icons-left">
-				<a href="https://kaz-ogiwara.github.io/">
+				<a href="https://kaz-ogiwara.github.io/" class="pjax">
 					<i class="material-icons" id="icon-home">home</i>
 				</a>
 			</div>
 			<div id="icons-right">
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/works/">Works</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/works/" class="pjax">Works</a></div>
 				<div class="separator">|</div>
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/">About</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/" class="pjax">About</a></div>
 			</div>
 		</div>
       <div id="pjax-content" class="home">
@@ -39,7 +42,7 @@
 				<div class="works">
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_viz4socialgood.png)">
-				<a href="https://kaz-ogiwara.github.io/works/viz4socialgood/description-en.html"></a>
+				<a href="https://kaz-ogiwara.github.io/works/viz4socialgood/description-en.html" class="pjax"></a>
 				<div class="ribbon">
 					<span></span>
 				</div>
@@ -48,7 +51,7 @@
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_teachers.png)">
-				<a href="https://kaz-ogiwara.github.io/works/teachers/description-en.html"></a>
+				<a href="https://kaz-ogiwara.github.io/works/teachers/description-en.html" class="pjax"></a>
 				<div class="ribbon">
 					<span></span>
 				</div>
@@ -57,7 +60,7 @@
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_jpycoins.png)">
-				<a href="https://kaz-ogiwara.github.io/works/jpycoins/description-en.html"></a>
+				<a href="https://kaz-ogiwara.github.io/works/jpycoins/description-en.html" class="pjax"></a>
 				<div class="ribbon">
 					<span></span>
 				</div>
@@ -71,7 +74,7 @@
 				<div class="works">
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_dissolution.png)">
-				<a href="https://kaz-ogiwara.github.io/works/dissolution/description-en.html"></a>
+				<a href="https://kaz-ogiwara.github.io/works/dissolution/description-en.html" class="pjax"></a>
 				<div class="ribbon">
 					<span></span>
 				</div>
@@ -85,55 +88,55 @@
 				<div class="works">
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_trade.png)">
-				<a href="https://kaz-ogiwara.github.io/works/trade/description-en.html"></a>
+				<a href="https://kaz-ogiwara.github.io/works/trade/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">Material to Product</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_pyramids.png)">
-				<a href="https://kaz-ogiwara.github.io/works/pyramids/description-en.html"></a>
+				<a href="https://kaz-ogiwara.github.io/works/pyramids/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">From Uganda to Japan</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_temperature.png)">
-				<a href="https://kaz-ogiwara.github.io/works/temperature/description-en.html"></a>
+				<a href="https://kaz-ogiwara.github.io/works/temperature/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">140 years temperature in Tokyo</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_nobelprize.png)">
-				<a href="https://kaz-ogiwara.github.io/works/nobelprize/description-en.html"></a>
+				<a href="https://kaz-ogiwara.github.io/works/nobelprize/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">Scientists Making a Queue</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_musicxml.png)">
-				<a href="https://kaz-ogiwara.github.io/works/musicxml/description-en.html"></a>
+				<a href="https://kaz-ogiwara.github.io/works/musicxml/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">Music score visualization</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_collisions.png)">
-				<a href="https://kaz-ogiwara.github.io/works/collisions/description-en.html"></a>
+				<a href="https://kaz-ogiwara.github.io/works/collisions/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">Vehicle collisions in Edinburgh</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_population.png)">
-				<a href="https://kaz-ogiwara.github.io/works/population/description-en.html"></a>
+				<a href="https://kaz-ogiwara.github.io/works/population/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">Population of Japan</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_tourists.png)">
-				<a href="https://kaz-ogiwara.github.io/works/tourists/description-en.html"></a>
+				<a href="https://kaz-ogiwara.github.io/works/tourists/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">Tourists to Japan</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_earthquakes.png)">
-				<a href="https://kaz-ogiwara.github.io/works/earthquakes/description-en.html"></a>
+				<a href="https://kaz-ogiwara.github.io/works/earthquakes/description-en.html" class="pjax"></a>
 				<div class="ribbon">
 					<span></span>
 				</div>
@@ -146,7 +149,8 @@
         </div>
       </div>
 		</div>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
     <script src="https://kaz-ogiwara.github.io/assets/js/script.js"></script>
   </body>
 </html>
