--- a/about/index.html
+++ b/about/index.html
@@ -15,100 +15,106 @@
     <link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.css">
 	</head>
 	<body>
+		<div id="cover">
+			<p>Loading...</p>
+		</div>
 		<div id="container">
 		<div id="icons-block">
 			<div id="icons-left">
-				<a href="https://kaz-ogiwara.github.io/">
+				<a href="https://kaz-ogiwara.github.io/" class="pjax">
 					<i class="material-icons" id="icon-home">home</i>
 				</a>
 			</div>
 			<div id="icons-right">
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/works/">Works</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/works/" class="pjax">Works</a></div>
 				<div class="separator">|</div>
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/">About</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/" class="pjax">About</a></div>
 			</div>
 		</div>
-      <div id="pjax-content" class="works">
-        <div id="title-block">
-          <h1>About</h1>
-        </div>
-        <div id="about-block">
-          <section>
-            <h2>Kazuki OGIWARA</h1>
-            <h5>Data Visualization Engineer / Designer in Tokyo</h5>
-            <div class="subsection">
-              <span class="strong">Born: </span>1987
-            </div>
-            <div class="subsection">
-              <span class="strong">Nationality: </span>Japanese
-            </div>
-            <div class="subsection">
-              <span class="strong">Alma mater: </span>University of Edinburgh (MSc. Design and Digital Media)
-            </div>
-            <div class="subsection">
-              <span class="strong">Residence: </span>Yokohama, Japan
-            </div>
-            <div class="subsection">
-              <span class="strong">Currently working as: </span>Data Visualization Engineer at Toyo Keizai Inc.
-            </div>
-            <div class="subsection">
-              <a href="https://www.linkedin.com/in/kazuki-ogiwara-9ba764122/" target="_blank">LinkedIn</a>
-              <span class="delimiter">|</span>
-              <a href="https://twitter.com/kaz_ogiwara" target="_blank">Twitter</a>
-            </div>
-          </section>
-          <section>
-            <h3>Work Experience</h3>
-            <div class="subsection">
-              <h4>
-                <span class="strong">Toyo Keizai Inc.</span>, Tokyo, Japan
-              </h4>
-              <p class="gray">April 2010 - Present</p>
-            </div>
-            <div class="subsection">
-              <h4>
-                <span class="strong">Data Visualization Engineer</span> at Digital Media Department
-              </h4>
-              <p class="gray">September 2017 - Present</p>
-            </div>
-            <div class="subsection">
-              <h4 class="leave">Leave of absence to study abroad</h4>
-              <p class="gray">September 2016 - August 2017</p>
-            </div>
-            <div class="subsection">
-              <h4>
-                <span class="strong">Database and Web Developer</span> at Database Business Department
-              </h4>
-              <p class="gray">April 2014 - August 2016</p>
-            </div>
-            <div class="subsection">
-              <h4>
-                <span class="strong">Data Editor</span> at Database Business Department
-              </h4>
-              <p class="gray">April 2010 - March 2014</p>
-            </div>
-          </section>
-          <section>
-            <h3>Education</h3>
-            <div class="subsection">
-              <h4>
-                <span class="strong">University of Edinburgh</span>, Edinburgh, United Kingdom
-              </h4>
-              <p class="gray">September 2016 - August 2017</p>
-              <p class="degree">Master of Science (Design and Digital Media)</p>
-            </div>
-            <div class="subsection">
-              <h4>
-                <span class="strong">University of Tsukuba</span>, Tsukuba, Japan
-              </h4>
-              <p class="gray">April 2006 - March 2010</p>
-              <p>Bachelor of Human Science (Social Psychology)</p>
-            </div>
-          </section>
+      <div id="pjax-content">
+        <div id="page-content" class="about">
+          <div id="title-block">
+            <h1>About</h1>
+          </div>
+          <div id="about-block">
+            <section>
+              <h2>Kazuki OGIWARA</h1>
+              <h5>Data Visualization Engineer / Designer in Tokyo</h5>
+              <div class="subsection">
+                <span class="strong">Born: </span>1987
+              </div>
+              <div class="subsection">
+                <span class="strong">Nationality: </span>Japanese
+              </div>
+              <div class="subsection">
+                <span class="strong">Alma mater: </span>University of Edinburgh (MSc. Design and Digital Media)
+              </div>
+              <div class="subsection">
+                <span class="strong">Residence: </span>Yokohama, Japan
+              </div>
+              <div class="subsection">
+                <span class="strong">Currently working as: </span>Data Visualization Engineer at Toyo Keizai Inc.
+              </div>
+              <div class="subsection">
+                <a href="https://www.linkedin.com/in/kazuki-ogiwara-9ba764122/" target="_blank">LinkedIn</a>
+                <span class="delimiter">|</span>
+                <a href="https://twitter.com/kaz_ogiwara" target="_blank">Twitter</a>
+              </div>
+            </section>
+            <section>
+              <h3>Work Experience</h3>
+              <div class="subsection">
+                <h4>
+                  <span class="strong">Toyo Keizai Inc.</span>, Tokyo, Japan
+                </h4>
+                <p class="gray">April 2010 - Present</p>
+              </div>
+              <div class="subsection">
+                <h4>
+                  <span class="strong">Data Visualization Engineer</span> at Digital Media Department
+                </h4>
+                <p class="gray">September 2017 - Present</p>
+              </div>
+              <div class="subsection">
+                <h4 class="leave">Leave of absence to study abroad</h4>
+                <p class="gray">September 2016 - August 2017</p>
+              </div>
+              <div class="subsection">
+                <h4>
+                  <span class="strong">Database and Web Developer</span> at Database Business Department
+                </h4>
+                <p class="gray">April 2014 - August 2016</p>
+              </div>
+              <div class="subsection">
+                <h4>
+                  <span class="strong">Data Editor</span> at Database Business Department
+                </h4>
+                <p class="gray">April 2010 - March 2014</p>
+              </div>
+            </section>
+            <section>
+              <h3>Education</h3>
+              <div class="subsection">
+                <h4>
+                  <span class="strong">University of Edinburgh</span>, Edinburgh, United Kingdom
+                </h4>
+                <p class="gray">September 2016 - August 2017</p>
+                <p class="degree">Master of Science (Design and Digital Media)</p>
+              </div>
+              <div class="subsection">
+                <h4>
+                  <span class="strong">University of Tsukuba</span>, Tsukuba, Japan
+                </h4>
+                <p class="gray">April 2006 - March 2010</p>
+                <p>Bachelor of Human Science (Social Psychology)</p>
+              </div>
+            </section>
+          </div>
         </div>
       </div>
 		</div>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
     <script src="https://kaz-ogiwara.github.io/assets/js/script.js"></script>
   </body>
 </html>
