--- a/works/dissolution/description-en.html
+++ b/works/dissolution/description-en.html
@@ -15,41 +15,47 @@
     <link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.css">
 	</head>
 	<body>
+		<div id="cover">
+			<p>Loading...</p>
+		</div>
 		<div id="container">
 		<div id="icons-block">
 			<div id="icons-left">
-				<a href="https://kaz-ogiwara.github.io/">
+				<a href="https://kaz-ogiwara.github.io/" class="pjax">
 					<i class="material-icons" id="icon-home">home</i>
 				</a>
 			</div>
 			<div id="icons-right">
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/works/">Works</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/works/" class="pjax">Works</a></div>
 				<div class="separator">|</div>
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/">About</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/" class="pjax">About</a></div>
 			</div>
 		</div>
-      <div id="pjax-content" class="work-description">
-        <div id="title-block">
-          <div class="date">November 2017</div>
-          <h1>Elections and Dissolutions in The G7</h1>
-          <h3>Timeline of elections and dissolutions in the G7 countries after WWII</h3>
-        </div>
-        <div id="eyecatch-block">
-          <a href="./">
-            <img id="eyecatch" src="../../assets/img/eyecatch_dissolution.png">
-          </a>
-        </div>
-        <div id="article-block">
-          <p>This is a timeline of elections and dissolutions in the G7 countries after WWII.</p>
-          <p>While Prime Minister of Japan virtually has a right to dissolve The House of Representatives, it has been often criticized to be arbitrary. This visualisation shows national elections of G7 countries after WWII, focusing on causes of elections.</p>
-          <p>Data source: <a href="http://dl.ndl.go.jp/view/download/digidepo_10202206_po_0923.pdf?contentNo=1" target="_blank">Takazawa, 2016</a></p>
-          <p>Languages and libraries: JavaScript (jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
-          <p><a class="button" href="./">See the App</a></p>
-          <p class="disclaimer">The app may not be available in your system environment.</p>
+      <div id="pjax-content">
+        <div id="page-content" class="work-description">
+          <div id="title-block">
+            <div class="date">November 2017</div>
+            <h1>Elections and Dissolutions in The G7</h1>
+            <h3>Timeline of elections and dissolutions in the G7 countries after WWII</h3>
+          </div>
+          <div id="eyecatch-block">
+            <a href="./">
+              <img id="eyecatch" src="../../assets/img/eyecatch_dissolution.png">
+            </a>
+          </div>
+          <div id="article-block">
+            <p>This is a timeline of elections and dissolutions in the G7 countries after WWII.</p>
+            <p>While Prime Minister of Japan virtually has a right to dissolve The House of Representatives, it has been often criticized to be arbitrary. This visualisation shows national elections of G7 countries after WWII, focusing on causes of elections.</p>
+            <p>Data source: <a href="http://dl.ndl.go.jp/view/download/digidepo_10202206_po_0923.pdf?contentNo=1" target="_blank">Takazawa, 2016</a></p>
+            <p>Languages and libraries: JavaScript (jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
+            <p><a class="button" href="./">See the App</a></p>
+            <p class="disclaimer">The app may not be available in your system environment.</p>
+          </div>
         </div>
       </div>
 		</div>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
     <script src="https://kaz-ogiwara.github.io/assets/js/script.js"></script>
   </body>
 </html>
