--- a/works/earthquakes/description-en.html
+++ b/works/earthquakes/description-en.html
@@ -15,40 +15,46 @@
     <link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.css">
 	</head>
 	<body>
+		<div id="cover">
+			<p>Loading...</p>
+		</div>
 		<div id="container">
 		<div id="icons-block">
 			<div id="icons-left">
-				<a href="https://kaz-ogiwara.github.io/">
+				<a href="https://kaz-ogiwara.github.io/" class="pjax">
 					<i class="material-icons" id="icon-home">home</i>
 				</a>
 			</div>
 			<div id="icons-right">
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/works/">Works</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/works/" class="pjax">Works</a></div>
 				<div class="separator">|</div>
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/">About</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/" class="pjax">About</a></div>
 			</div>
 		</div>
-      <div id="pjax-content" class="work-description">
-        <div id="title-block">
-          <div class="date">23 Feb 2017</div>
-          <h1>Earthquakes on the earth</h1>
-          <h3>Animation of earthquakes on the earth in the past an hour to 30 days</h3>
-        </div>
-        <div id="eyecatch-block">
-          <a href="./">
-            <img id="eyecatch" src="../../assets/img/eyecatch_earthquakes.png">
-          </a>
-        </div>
-        <div id="article-block">
-          <p>This work was originallu submitted as a class assignment, and then improved in 2018.</p>
-          <p>Data source: <a href="https://earthquake.usgs.gov/earthquakes/feed/v1.0/" target="_blank">US Georogical Survey</a></p>
-          <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
-          <p><a class="button" href="./">See the App</a></p>
-          <p class="disclaimer">The app may not be available in your system environment.</p>
+      <div id="pjax-content">
+        <div id="page-content" class="work-description">
+          <div id="title-block">
+            <div class="date">23 Feb 2017</div>
+            <h1>Earthquakes on the earth</h1>
+            <h3>Animation of earthquakes on the earth in the past an hour to 30 days</h3>
+          </div>
+          <div id="eyecatch-block">
+            <a href="./">
+              <img id="eyecatch" src="../../assets/img/eyecatch_earthquakes.png">
+            </a>
+          </div>
+          <div id="article-block">
+            <p>This work was originallu submitted as a class assignment, and then improved in 2018.</p>
+            <p>Data source: <a href="https://earthquake.usgs.gov/earthquakes/feed/v1.0/" target="_blank">US Georogical Survey</a></p>
+            <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
+            <p><a class="button" href="./">See the App</a></p>
+            <p class="disclaimer">The app may not be available in your system environment.</p>
+          </div>
         </div>
       </div>
 		</div>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
     <script src="https://kaz-ogiwara.github.io/assets/js/script.js"></script>
   </body>
 </html>
