--- a/works/viz4socialgood/description-en.html
+++ b/works/viz4socialgood/description-en.html
@@ -15,42 +15,48 @@
     <link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.css">
 	</head>
 	<body>
+		<div id="cover">
+			<p>Loading...</p>
+		</div>
 		<div id="container">
 		<div id="icons-block">
 			<div id="icons-left">
-				<a href="https://kaz-ogiwara.github.io/">
+				<a href="https://kaz-ogiwara.github.io/" class="pjax">
 					<i class="material-icons" id="icon-home">home</i>
 				</a>
 			</div>
 			<div id="icons-right">
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/works/">Works</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/works/" class="pjax">Works</a></div>
 				<div class="separator">|</div>
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/">About</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/" class="pjax">About</a></div>
 			</div>
 		</div>
-      <div id="pjax-content" class="work-description">
-        <div id="title-block">
-          <div class="date">July 2018</div>
-          <h1>Visualization of Human Trafficking</h1>
-          <h3>"But you do not know where I came from or where I am going"</h3>
-        </div>
-        <div id="eyecatch-block">
-          <a href="./">
-            <img id="eyecatch" src="../../assets/img/eyecatch_viz4socialgood.png">
-          </a>
-        </div>
-        <div id="article-block">
-          <p>Interactive sankey diagram, map and details for <a href="https://www.vizforsocialgood.com/" target="_blank">Viz for Social Good</a></p>
-          <p>By hovering (or tapping) side bar, detailed information about the people from / to the country is shown.</p>
-          <p><img src="img/screencast_viz4socialgood.gif"></p>
-          <p>Data source: <a href="https://www.ctdatacollaborative.org/" target="_blank">The Counter-Trafficking Data Collaborative</a> (CTDC)</p>
-          <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) for retrieving and shaping data</p>
-          <p><a class="button" href="./">See the App</a></p>
-          <p class="disclaimer">The app may not be available in your system environment.</p>
+      <div id="pjax-content">
+        <div id="page-content" class="work-description">
+          <div id="title-block">
+            <div class="date">July 2018</div>
+            <h1>Visualization of Human Trafficking</h1>
+            <h3>"But you do not know where I came from or where I am going"</h3>
+          </div>
+          <div id="eyecatch-block">
+            <a href="./">
+              <img id="eyecatch" src="../../assets/img/eyecatch_viz4socialgood.png">
+            </a>
+          </div>
+          <div id="article-block">
+            <p>Interactive sankey diagram, map and details for <a href="https://www.vizforsocialgood.com/" target="_blank">Viz for Social Good</a></p>
+            <p>By hovering (or tapping) side bar, detailed information about the people from / to the country is shown.</p>
+            <p><img src="img/screencast_viz4socialgood.gif"></p>
+            <p>Data source: <a href="https://www.ctdatacollaborative.org/" target="_blank">The Counter-Trafficking Data Collaborative</a> (CTDC)</p>
+            <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) for retrieving and shaping data</p>
+            <p><a class="button" href="./">See the App</a></p>
+            <p class="disclaimer">The app may not be available in your system environment.</p>
+          </div>
         </div>
       </div>
 		</div>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
     <script src="https://kaz-ogiwara.github.io/assets/js/script.js"></script>
   </body>
 </html>
