Add "target" attribute to links to apps

--- a/works/viz4socialgood/description-en.html
+++ b/works/viz4socialgood/description-en.html
@@ -49,7 +49,7 @@
             <p><img src="img/screencast_viz4socialgood.gif"></p>
             <p>Data source: <a href="https://www.ctdatacollaborative.org/" target="_blank">The Counter-Trafficking Data Collaborative</a> (CTDC)</p>
             <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) for retrieving and shaping data</p>
-            <p><a class="button" href="./">See the App</a></p>
+            <p><a class="button" href="./" target="_blank">See the App</a></p>
             <p class="disclaimer">The app may not be available in your system environment.</p>
           </div>
         </div>
