--- a/works/jpycoins/description-en.html
+++ b/works/jpycoins/description-en.html
@@ -50,7 +50,7 @@
             <p>While I considered to make the visualization by using only line chart at first, just visualizing with a chart was somehow unimpressive. Thus I added slider and animation, using P5.js.</p>
             <p>Data source: <a href="https://www.mint.go.jp/eng/coin-eng/eng_number_of_coin_production28.html" target="_blank">Japan Mint</a>.</p>
             <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
-            <p><a class="button" href="./">See the App</a></p>
+            <p><a class="button" href="./" target="_blank">See the App</a></p>
             <p class="disclaimer">The app may not be available in your system environment.</p>
           </div>
         </div>
