Fix title, add a link to Twitter to home

--- a/about/index.html
+++ b/about/index.html
@@ -53,7 +53,7 @@
                 <span class="strong">Residence: </span>Yokohama, Japan
               </div>
               <div class="subsection">
-                <span class="strong">Currently working as: </span>Data Visualization Engineer at Toyo Keizai Inc.
+                <span class="strong">Currently working as: </span>Data Visualization Engineer / Designer at Toyo Keizai Inc.
               </div>
               <div class="subsection">
                 <a href="https://www.linkedin.com/in/kazuki-ogiwara-9ba764122/" target="_blank">LinkedIn</a>
