--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div id="page-content" class="home">
           <div id="title-block">
             <h1>Kazuki OGIWARA</h1>
-            <h3>Data Visualization Engineer in Tokyo</h3>
+            <h3>Data Visualization Engineer / Designer in Tokyo</h3>
           </div>
           <div id="works-block">
             <section>
@@ -89,10 +89,12 @@
                 <span class="strong">Residence: </span>Yokohama, Japan
               </div>
               <div class="subsection">
-                <span class="strong">Currently working as: </span>Data Visualization Engineer at Toyo Keizai Inc.
+                <span class="strong">Currently working as: </span>Data Visualization Engineer / Designer at Toyo Keizai Inc.
               </div>
               <div class="subsection">
                 <a href="https://www.linkedin.com/in/kazuki-ogiwara-9ba764122/" target="_blank">LinkedIn</a>
+                <span class="delimiter">|</span>
+                <a href="https://twitter.com/kaz_ogiwara" target="_blank">Twitter</a>
               </div>
             </section>
           </div>
