script.js -> script.min.js, style.css -> style.min.css

--- a/works/nobelprize/description-en.html
+++ b/works/nobelprize/description-en.html
@@ -12,7 +12,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <title>Scientists Making a Queue</title>
 		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/nobelprize/description-amp-en.html">
-    <link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.css">
+    <link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.min.css">
 	</head>
 	<body>
 		<div id="cover">
@@ -53,6 +53,6 @@
 		</div>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
-    <script src="https://kaz-ogiwara.github.io/assets/js/script.js"></script>
+    <script src="https://kaz-ogiwara.github.io/assets/js/script.min.js"></script>
   </body>
 </html>
