Add Google Analytics tracking code

--- a/works/tourists/description-en.html
+++ b/works/tourists/description-en.html
@@ -12,7 +12,9 @@
     <meta name="twitter:card" content="summary_large_image" />
     <title>Tourists to Japan</title>
 		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/tourists/description-amp-en.html">
-    <link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.min.css">
+		<link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.min.css">
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-89303107-2"></script>
+		<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','UA-89303107-2');</script>
 	</head>
 	<body>
 		<div id="cover">
