--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_home.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <title></title>
-		<link rel="amphtml" href="">
-    <link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.min.css">
+		<link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.min.css">
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-89303107-2"></script>
+		<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','UA-89303107-2');</script>
 	</head>
 	<body>
 		<div id="cover">
