Open app in a new tab, Cleanup /works/earthquakes/

--- a/works/dissolution/description-en.html
+++ b/works/dissolution/description-en.html
@@ -41,7 +41,7 @@
             <h3>Timeline of elections and dissolutions in the G7 countries after WWII</h3>
           </div>
           <div id="eyecatch-block">
-            <a href="./">
+            <a href="./" target="_blank">
               <img id="eyecatch" src="../../assets/img/eyecatch_dissolution.png">
             </a>
           </div>
