--- a/works/earthquakes/description-en.html
+++ b/works/earthquakes/description-en.html
@@ -41,7 +41,7 @@
             <h3>Animation of earthquakes on the earth in the past an hour to 30 days</h3>
           </div>
           <div id="eyecatch-block">
-            <a href="./">
+            <a href="./" target="_blank">
               <img id="eyecatch" src="../../assets/img/eyecatch_earthquakes.png">
             </a>
           </div>
