--- a/works/earthquakes/index.html
+++ b/works/earthquakes/index.html
@@ -17,6 +17,9 @@
   </head>
   <body>
     <div id="container">
+      <div id="icon-block">
+        <a href="../../"><div id="icon-home">Kazuki OGIWARA</div></a>
+      </div>
       <div id="title-block">
         <h1>Earthquakes in the world</h1>
         <h4>Animation of earthquakes on the earth in the past an hour to 30 days</h4>
