--- a/works/viz4socialgood/description-en.html
+++ b/works/viz4socialgood/description-en.html
@@ -41,7 +41,7 @@
             <h3>"But you do not know where I came from or where I am going"</h3>
           </div>
           <div id="eyecatch-block">
-            <a href="./">
+            <a href="./" target="_blank">
               <img id="eyecatch" src="../../assets/img/eyecatch_viz4socialgood.png">
             </a>
           </div>
