--- a/works/jpycoins/description-en.html
+++ b/works/jpycoins/description-en.html
@@ -41,7 +41,7 @@
             <h3>Number of Coins Issued in Japan from 1948 to 2016</h3>
           </div>
           <div id="eyecatch-block">
-            <a href="./">
+            <a href="./" target="_blank">
               <img id="eyecatch" src="../../assets/img/eyecatch_jpycoins.png">
             </a>
           </div>
