--- a/works/teachers/description-en.html
+++ b/works/teachers/description-en.html
@@ -41,7 +41,7 @@
             <h3>How and why the job security of elementary and junior high school teachers is collapsing</h3>
           </div>
           <div id="eyecatch-block">
-            <a href="./">
+            <a href="./" target="_blank">
               <img id="eyecatch" src="../../assets/img/eyecatch_teachers.png">
             </a>
           </div>
